# KYP-MEM

./: .gitignore  CLAUDE.md  LICENSE  PLAN-ui-rewrite.md  README.md  package.json  pyproject.toml
.omc/: project-memory.json
.omc/sessions/: 4c5e6629-7728-43ce-83dd-70a191643bfb.json  5842d604-0d87-48e5-80d5-83c32f07a1d6.json  694e6ab2-6c5a-411a-96c3-cf834fee9a51.json  8dbc506f-24be-45ae-a8f8-47ccf7adbb1a.json  a67f5842-3e7b-434d-be32-205f34c6ee32.json  f52460d2-8c3a-46f6-a465-3755a2c2e5b1.json  fdfe282e-77c2-417b-906f-fe592ae06730.json
.omc/state/: agent-replay-d679ac36-2848-43a5-8be0-cf550f5ec443.jsonl  agent-replay-fdfe282e-77c2-417b-906f-fe592ae06730.jsonl  hud-stdin-cache.json  idle-notif-cooldown.json
.omc/state/sessions/4c5e6629-7728-43ce-83dd-70a191643bfb/: session-started.json
.omc/state/sessions/5842d604-0d87-48e5-80d5-83c32f07a1d6/: session-started.json
.omc/state/sessions/694e6ab2-6c5a-411a-96c3-cf834fee9a51/: session-started.json
.omc/state/sessions/6b152773-fd82-4e06-8540-c35da64dd3d8/: session-started.json
.omc/state/sessions/8dbc506f-24be-45ae-a8f8-47ccf7adbb1a/: session-started.json
.omc/state/sessions/a67f5842-3e7b-434d-be32-205f34c6ee32/: session-started.json
.omc/state/sessions/d679ac36-2848-43a5-8be0-cf550f5ec443/: hud-state.json  last-tool-error-state.json  mission-state.json  pre-tool-advisory-throttle.json  session-started.json  subagent-tracking-state.json
.omc/state/sessions/f52460d2-8c3a-46f6-a465-3755a2c2e5b1/: hud-state.json  pre-tool-advisory-throttle.json  session-started.json
.omc/state/sessions/fdfe282e-77c2-417b-906f-fe592ae06730/: hud-state.json  last-tool-error-state.json  pre-tool-advisory-throttle.json  session-started.json  subagent-tracking-state.json
kyp_mem/: __init__.py  cli.py  config.py  hooks.py  server.py  ui.py  vault.py  vector.py
kyp_mem/static/: index.html
templates/: CLAUDE.md.template
