[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kyp-mem"
version = "0.1.0"
description = "Know Your Project — Headless Obsidian for AI agents"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
kyp-mem = "kyp_mem.cli:main"
